--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 <body>
     <header>
         <h1>Jim Achterberg</h1>
-        <p>Machine Learning Researcher | Academic</p>
+        <p>Machine Learning Researcher </p>
     </header>
     <div class="container">
         <h2>About Me</h2>
-        <p>PhD candidate in Machine Learning, working on generative models, representation learning, and statistical methods.</p>
+        <p>PhD candidate in Machine Learning, working on generative models, specifically privacy-preserving synthetic data.</p>
         
         <h2>Publications</h2>
         <ul class="publications">
